--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
+    "express-rate-limit": "^2.9.0",
     "nodemon": "^1.12.1",
     "telegraf": "^3.14.0"
   }
