--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "express-rate-limit": "^2.9.0",
+    "isemail": "^3.1.2",
     "telegraf": "^3.14.0"
   }
 }
